--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,12 +5,12 @@
 <% @product_list.each do |product| %>
   <div class="row">
     <div class="col-md-4">
-      <a href="/products/show"><img src="http://images.apple.com/iphone-5s/specs/images/color_gray.jpg"></a>
+      <a href="/products/show"><img src=<%= product.image %>></a>
     </div>
     <div class="col-md-8">
-      <h3><a href="/products/show">iPhone 5s</a></h3>
-      <p class="lead">$299</p>
-      <p>A chip with 64-bit architecture. A fingerprint identity sensor. A better, faster camera. And an operating system built specifically for 64-bit. Any one of these features in a smartphone would make it ahead of its time. All of these features in a smartphone make it an iPhone that’s definitely ahead of its time.</p>
+      <h3><a href="/products/show"><%= product.name %></a></h3>
+      <!-- <p class="lead"></p> -->
+      <p><%= product.description %></p>
     </div>
   </div>
 <% end %>
